[gd_scene load_steps=4 format=2]

[ext_resource path="res://Recursos/Tiles/tile_0108.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Player/EnemigoBase.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0179

[node name="EnemigoBase" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TiempoStun" type="Timer" parent="."]
wait_time = 0.06

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemigoBase_body_entered"]
[connection signal="timeout" from="TiempoStun" to="." method="_on_TiempoStun_timeout"]
